--- a/manifest/example/example-dashboard.yaml
+++ b/manifest/example/example-dashboard.yaml
@@ -1,7 +1,7 @@
 apiVersion: "appoptics.io/v1"
 kind: "Dashboard"
 metadata:
-  name: "exampleDashboard"
+  name: "exampledashboard"
   namespace: default
 spec:
   namespace: "default"
