--- a/manifest/example/example-service.yaml
+++ b/manifest/example/example-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: "appoptics.io/v1"
 kind: "Service"
 metadata:
-  name: "exampleService"
+  name: exampleservice
   namespace: default
 spec:
   namespace: "default"
