--- a/manifest/example/example-service.yaml
+++ b/manifest/example/example-service.yaml
@@ -3,6 +3,8 @@ kind: "Service"
 metadata:
   name: exampleservice
   namespace: default
+  finalizers:
+  - appoptics.io
 spec:
   namespace: "default"
   token: ""
