Upgrade controller to use secret for appoptics token

--- a/manifest/example/example-dashboard.yaml
+++ b/manifest/example/example-dashboard.yaml
@@ -7,7 +7,7 @@ metadata:
   - appoptics.io
 spec:
   namespace: "default"
-  token: ""
+  secret: "appoptics"
   data: |-
     name: Kafka Dashboard
     charts:
