--- a/manifest/example/example-alert.yaml
+++ b/manifest/example/example-alert.yaml
@@ -7,7 +7,7 @@ metadata:
   - appoptics.io
 spec:
   namespace: "default"
-  token: ""
+  secret: "appoptics"
   data: |-
         name: "KafkaActiveControllerCount"
         description: "ActiveControllerCount"
