--- a/manifest/example/example-service.yaml
+++ b/manifest/example/example-service.yaml
@@ -7,7 +7,7 @@ metadata:
   - appoptics.io
 spec:
   namespace: "default"
-  token: ""
+  secret: "appoptics"
   data: |-
     type: "mail"
     settings:
