Refactor Kind name for compatibility with kubernetes

--- a/manifest/dashboard-crd.yaml
+++ b/manifest/dashboard-crd.yaml
@@ -1,11 +1,11 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: dashboards.appoptics.io
+  name: appopticsdashboards.appoptics.io
 spec:
   group: appoptics.io
   version: v1
   names:
-    kind: Dashboard
-    plural: dashboards
+    kind: AppOpticsDashboard
+    plural: appopticsdashboards
   scope: Namespaced
