--- a/manifest/alert-crd.yaml
+++ b/manifest/alert-crd.yaml
@@ -1,11 +1,11 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: alerts.appoptics.io
+  name: appopticsalerts.appoptics.io
 spec:
   group: appoptics.io
   version: v1
   names:
-    kind: Alert
-    plural: alerts
+    kind: AppOpticsAlert
+    plural: appopticsalerts
   scope: Namespaced
