--- a/manifest/service-crd.yaml
+++ b/manifest/service-crd.yaml
@@ -1,11 +1,11 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: services.appoptics.io
+  name: appopticsservices.appoptics.io
 spec:
   group: appoptics.io
   version: v1
   names:
-    kind: Service
-    plural: services
+    kind: AppOpticsService
+    plural: appopticsservices
   scope: Namespaced
