--- a/helm/appoptics-controller/templates/rbac.yaml
+++ b/helm/appoptics-controller/templates/rbac.yaml
@@ -1,11 +1,11 @@
 kind: ServiceAccount
 apiVersion: v1
 metadata:
-  name: {{ include "appoptics-kubernetes.fullname" . }}
+  name: {{ include "appoptics-controller.fullname" . }}
   namespace: {{  .Values.namespace }}
   labels:
-    app: {{ template "appoptics-kubernetes.name" . }}
-    chart: {{ template "appoptics-kubernetes.chart" . }}
+    app: {{ template "appoptics-controller.name" . }}
+    chart: {{ template "appoptics-controller.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 ---
@@ -13,10 +13,10 @@ metadata:
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ include "appoptics-kubernetes.fullname" . }}
+  name: {{ include "appoptics-controller.fullname" . }}
   labels:
-    app: {{ template "appoptics-kubernetes.name" . }}
-    chart: {{ template "appoptics-kubernetes.chart" . }}
+    app: {{ template "appoptics-controller.name" . }}
+    chart: {{ template "appoptics-controller.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 rules:
@@ -43,17 +43,17 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ include "appoptics-kubernetes.fullname" . }}
+  name: {{ include "appoptics-controller.fullname" . }}
   labels:
-    app: {{ template "appoptics-kubernetes.name" . }}
-    chart: {{ template "appoptics-kubernetes.chart" . }}
+    app: {{ template "appoptics-controller.name" . }}
+    chart: {{ template "appoptics-controller.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 subjects:
 - kind: ServiceAccount
-  name: {{ include "appoptics-kubernetes.fullname" . }}
+  name: {{ include "appoptics-controller.fullname" . }}
   namespace: {{  .Values.namespace }}
 roleRef:
   kind: ClusterRole
-  name: {{ include "appoptics-kubernetes.fullname" . }}
+  name: {{ include "appoptics-controller.fullname" . }}
   apiGroup: rbac.authorization.k8s.io
