--- a/helm/appoptics-controller/values.yaml
+++ b/helm/appoptics-controller/values.yaml
@@ -1,4 +1,4 @@
-# Default values for appoptics-kubernetes.
+# Default values for appoptics-controller.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -6,7 +6,7 @@ namespace: default
 
 image:
   registry: docker.io
-  repository: appoptics/appoptics-kubernetes-controller
+  repository: appoptics/appoptics-controller-controller
   tag: "0.1"
   pullPolicy: IfNotPresent
 
