adding 'AppOptics' label to Kind

--- a/manifest/example/example-dashboard.yaml
+++ b/manifest/example/example-dashboard.yaml
@@ -1,5 +1,5 @@
 apiVersion: "appoptics.io/v1"
-kind: "Dashboard"
+kind: "AppOpticsDashboard"
 metadata:
   name: exampledashboard
   namespace: default
