--- a/manifest/alert-crd.yaml
+++ b/manifest/alert-crd.yaml
@@ -1,10 +1,26 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: appopticsalerts.appoptics.io
 spec:
   group: appoptics.io
-  version: v1
+  versions:
+    - name: v1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              properties:
+                namespace:
+                  type: string
+                secret:
+                  type: string
+                data:
+                  type: string
   names:
     kind: AppOpticsAlert
     plural: appopticsalerts
